[package]
name = "famly-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
error-chain = "0.12.4"
lazy_static = "1.4.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0.82", features = ["derive"] }
serde_json = "1.0.82"
urlencoding = "2.1.0"